--- a/index.html
+++ b/index.html
@@ -2,9 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Codeup Design</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/codeup-design.css">
 </head>
-<body>
 
+<body id="custom">
+<header>
+    <div class="container pt-5 pb-5 text-center" id="main-container">
+        <div class="header">
+            <div id="row-text-center">
+                <div class="col" id="name-col">
+                    <h1 id="name-header" class="display-3">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                </div>
+            </div>
+            <div class="row text-center mt-5" id="from-col">
+                <div class="col-12">
+                    <h2 class="display-5">FROM PARK CITY, UTAH</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="row">
+<!--    <div class="col-6">-->
+        <div class="col-6 circle">
+            <p class="circle-content">DESIGN</p>
+        </div>
+        <div class="col-6 circle">
+            <p class="circle-content col-sm">DEVELOP</p>
+        </div>
+<!--    </div>-->
+</section>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
