Adding progress on codeup design project

--- a/index.html
+++ b/index.html
@@ -26,17 +26,48 @@
         </div>
     </div>
 </header>
-<section class="row">
-<!--    <div class="col-6">-->
-        <div class="col-6 circle">
-            <p class="circle-content">DESIGN</p>
-        </div>
-        <div class="col-6 circle">
-            <p class="circle-content col-sm">DEVELOP</p>
-        </div>
-<!--    </div>-->
-</section>
 
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="one-to-one color-1">
+                <div class="text">Test</div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="one-to-one color-2">
+                <div class="text">Test</div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="two-to-one color-3">
+                <div class="text">Test</div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="two-to-one color-4">
+                <div class="text">Test</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--<div class="container">-->
+<!--<section class="row">-->
+<!--    &lt;!&ndash;    <div class="col-6">&ndash;&gt;-->
+<!--    <div class="col-6 d-flex justify-content-center">-->
+<!--        <div class="circle">-->
+<!--            <p class="circle-content">DESIGN</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-6 d-flex justify-content-center bg-danger">-->
+<!--        <div class="circle">-->
+<!--            <p class="circle-content">develop</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
+<!--</section>-->
+<!--</div>-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
