--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Codeup Design</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/codeup-design.css">
@@ -11,65 +12,142 @@
 
 <body id="custom">
 <header>
-    <div class="container pt-5 pb-5 text-center" id="main-container">
-        <div class="header">
-            <div id="row-text-center">
-                <div class="col" id="name-col">
-                    <h1 id="name-header" class="display-3">VISUAL DESIGN & WEB DEVELOPMENT</h1>
-                </div>
-            </div>
-            <div class="row text-center mt-5" id="from-col">
-                <div class="col-12">
-                    <h2 class="display-5">FROM PARK CITY, UTAH</h2>
-                </div>
-            </div>
-        </div>
+    <div class="container my-3 text-center" id="main-container">
+        <h1 id="name-header">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        <h2 class="my-3">FROM PARK CITY, UTAH</h2>
     </div>
 </header>
 
 <div class="container">
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 col-sm-3 d-flex justify-content-end justify-content-sm-center align-items-center">
             <div class="one-to-one color-1">
-                <div class="text">Test</div>
+                <div class="text">DESIGN</div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 col-sm-3 d-flex justify-content-start justify-content-sm-center align-items-center">
             <div class="one-to-one color-2">
-                <div class="text">Test</div>
+                <div class="text">DEVELOP</div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="two-to-one color-3">
-                <div class="text">Test</div>
+
+        <div class="col-6 col-sm-3 mt-3 mt-sm-0 d-flex justify-content-end justify-content-sm-center align-items-center">
+            <div class="one-to-one color-3">
+                <div class="text">SUPPORT</div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="two-to-one color-4">
-                <div class="text">Test</div>
+        <div class="col-6 col-sm-3 mt-3 mt-sm-0 d-flex justify-content-start justify-content-sm-center align-items-center">
+            <div class="one-to-one color-4">
+                <div class="text">HOST</div>
             </div>
         </div>
     </div>
+
+    <hr class="d-none d-sm-block mb-10">
+
+<div class="container d-flex justify-content-between">
+    <p class="text-center ">SELECTED WORK</p>
+    <p class="text-center text-right">THE LAST</p>
 </div>
 
-<!--<div class="container">-->
-<!--<section class="row">-->
-<!--    &lt;!&ndash;    <div class="col-6">&ndash;&gt;-->
-<!--    <div class="col-6 d-flex justify-content-center">-->
-<!--        <div class="circle">-->
-<!--            <p class="circle-content">DESIGN</p>-->
+    <main class="row">
+
+        <!--CARD 1-->
+        <div class="col-sm-12 col-md-8">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                    <div class="row card mx-auto" style="width: 100%;">
+                        <img class="card-img-top" src="img/apple-ipad.jpg" width="100%" alt="ipad">
+                        <div class="row mt-1 card-body">
+                            <div class="col-6">FEATURED PROJECT</div>
+                            <div class="col-6 d-flex justify-content-end">
+                                <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--CARD 2-->
+                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                    <div class="row card mx-auto" style="width: 100%;">
+                        <img class="card-img-top" src="img/macbook.jpg" width="100%" alt="ipad">
+                        <div class="row mt-1 card-body">
+                            <div class="col-6">FEATURED PROJECT</div>
+                            <div class="col-6 d-flex justify-content-end">
+                                <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--CARD 3-->
+                <div class="w-100 d-md-block d-sm-none"></div>
+                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                    <div class="row card mx-auto" style="width: 100%;">
+                        <img class="card-img-top" src="img/man.jpg" width="100%" alt="ipad">
+                        <div class="row mt-1 card-body">
+                            <div class="col-6">FEATURED PROJECT</div>
+                            <div class="col-6 d-flex justify-content-end">
+                                <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--CARD 4-->
+                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                    <div class="row card mx-auto" style="width: 100%;">
+                        <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
+                        <div class="row mt-1 card-body">
+                            <div class="col-6">FEATURED PROJECT</div>
+                            <div class="col-6 d-flex justify-content-end">
+                                <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--        <div class="col-md-4 d-sm-none">-->
 <!--        </div>-->
-<!--    </div>-->
-<!--    <div class="col-6 d-flex justify-content-center bg-danger">-->
-<!--        <div class="circle">-->
-<!--            <p class="circle-content">develop</p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
-<!--</section>-->
-<!--</div>-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+<div class="col">
+        <div class="col-sm-12 col-md-4 d-flex flex-column">
+            <div class="row card mx-auto" style="width: 100%;">
+                <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
+                <div class="row mt-1 card-body">
+                    <div class="col-6">FEATURED PROJECT</div>
+                    <div class="col-6 d-flex justify-content-end">
+                        <div class="badge badge-pill pill-color1 mx-1">D</div>
+                        <div class="badge badge-pill pill-color2 mx-1">D</div>
+                        <div class="badge badge-pill pill-color3 mx-1">S</div>
+                        <div class="badge badge-pill pill-color4 ml-1">H</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+    </main>
+
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
 </body>
 </html>
