adding more stuff to the project

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <hr class="d-none d-sm-block mb-10">
 
 <div class="container d-flex justify-content-between">
-    <p class="text-center ">SELECTED WORK</p>
-    <p class="text-center text-right">THE LAST</p>
+    <p class="text-center mt-3">SELECTED WORK</p>
+    <p class="text-center mt-3 ">THE LAST</p>
 </div>
 
     <main class="row">
