making changes to the project

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
 
     <hr class="d-none d-sm-block mb-10">
 
-<div class="container d-flex justify-content-between">
-    <p class="text-center mt-3">SELECTED WORK</p>
-    <p class="text-center mt-3 ">THE LAST</p>
-</div>
+    <div class="row">
+        <div class="col-md-5 text-left">
+            <p class="text-center mt-3">SELECTED WORK</p>
+        </div>
+        <div class="col-md-7">
+            <p class="text-center mt-3 ">THE LAST</p>
+        </div>
+    </div>
 
     <main class="row">
 
@@ -117,25 +121,18 @@
                 </div>
             </div>
         </div>
-<!--        <div class="col-md-4 d-sm-none">-->
-<!--        </div>-->
-<div class="col">
-        <div class="col-sm-12 col-md-4 d-flex flex-column">
-            <div class="row card mx-auto" style="width: 100%;">
-                <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
-                <div class="row mt-1 card-body">
-                    <div class="col-6">FEATURED PROJECT</div>
-                    <div class="col-6 d-flex justify-content-end">
-                        <div class="badge badge-pill pill-color1 mx-1">D</div>
-                        <div class="badge badge-pill pill-color2 mx-1">D</div>
-                        <div class="badge badge-pill pill-color3 mx-1">S</div>
-                        <div class="badge badge-pill pill-color4 ml-1">H</div>
-                    </div>
+        <!--        <div class="col-md-4 d-sm-none">-->
+        <!--        </div>-->
+        <div class="col">
+            <div class="col-sm-12 col-md-5 d-flex flex-row">
+                <div class="row card mx-auto" style="width: 100%;">
+                    <img class="card-img-let" src="img/security.jpg" width="100%" alt="ipad">
+                    <p class="text-left">The Adom</p>
                 </div>
             </div>
         </div>
 </div>
-    </main>
+</main>
 
 </div>
 
