adding new stuff

--- a/index.html
+++ b/index.html
@@ -52,85 +52,87 @@
         <div class="col-md-7">
             <p class="text-center mt-3 ">THE LAST</p>
         </div>
+
+
+        <main class="row">
+
+            <!--CARD 1-->
+            <div class="col-sm-12 col-md-8">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/apple-ipad.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--CARD 2-->
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/macbook.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--CARD 3-->
+                    <div class="w-100 d-md-block d-sm-none"></div>
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/man.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--CARD 4-->
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--        <div class="col-md-4 d-sm-none">-->
+            <!--        </div>-->
+            <div class="col">
+                <div class="col-sm-12 col-md-5 d-flex flex-row">
+                    <div class="row card mx-auto" style="width: 100%;">
+                        <img class="card-img-let" src="img/security.jpg" width="100%" alt="ipad">
+                        <p class="text-left">The Adom</p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-
-    <main class="row">
-
-        <!--CARD 1-->
-        <div class="col-sm-12 col-md-8">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/apple-ipad.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--CARD 2-->
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/macbook.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--CARD 3-->
-                <div class="w-100 d-md-block d-sm-none"></div>
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/man.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--CARD 4-->
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--        <div class="col-md-4 d-sm-none">-->
-        <!--        </div>-->
-        <div class="col">
-            <div class="col-sm-12 col-md-5 d-flex flex-row">
-                <div class="row card mx-auto" style="width: 100%;">
-                    <img class="card-img-let" src="img/security.jpg" width="100%" alt="ipad">
-                    <p class="text-left">The Adom</p>
-                </div>
-            </div>
-        </div>
 </div>
 </main>
 
