adding content on the right side of the project

--- a/index.html
+++ b/index.html
@@ -46,98 +46,114 @@
     <hr class="d-none d-sm-block mb-10">
 
     <div class="row">
-        <div class="col-md-5 text-left">
-            <p class="text-center mt-3">SELECTED WORK</p>
+        <div class="col-md-8">
+            <p class="text-left mt-3">SELECTED WORK</p>
         </div>
-        <div class="col-md-7">
-            <p class="text-center mt-3 ">THE LAST</p>
+        <div class="col-md-4">
+            <p class=" mt-3">The last</p>
         </div>
-    </div>
 
-    <main class="row">
+        <main class="row">
 
-        <!--CARD 1-->
-        <div class="col-sm-12 col-md-8">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/apple-ipad.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+            <!--CARD 1-->
+            <div class="col-sm-12 col-md-8">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/apple-ipad.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!--CARD 2-->
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/macbook.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                    <!--CARD 2-->
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/macbook.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!--CARD 3-->
-                <div class="w-100 d-md-block d-sm-none"></div>
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/man.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                    <!--CARD 3-->
+                    <div class="w-100 d-md-block d-sm-none"></div>
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/man.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!--CARD 4-->
-                <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
-                    <div class="row card mx-auto" style="width: 100%;">
-                        <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
-                        <div class="row mt-1 card-body">
-                            <div class="col-6">FEATURED PROJECT</div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <div class="badge badge-pill pill-color1 mx-1">D</div>
-                                <div class="badge badge-pill pill-color2 mx-1">D</div>
-                                <div class="badge badge-pill pill-color3 mx-1">S</div>
-                                <div class="badge badge-pill pill-color4 ml-1">H</div>
+                    <!--CARD 4-->
+                    <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
+                        <div class="row card mx-auto" style="width: 100%;">
+                            <img class="card-img-top" src="img/security.jpg" width="100%" alt="ipad">
+                            <div class="row mt-1 card-body">
+                                <div class="col-6">FEATURED PROJECT</div>
+                                <div class="col-6 d-flex justify-content-end">
+                                    <div class="badge badge-pill pill-color1 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color2 mx-1">D</div>
+                                    <div class="badge badge-pill pill-color3 mx-1">S</div>
+                                    <div class="badge badge-pill pill-color4 ml-1">H</div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--        <div class="col-md-4 d-sm-none">-->
-        <!--        </div>-->
 
+            <div class="col-sm-12 col-md-3 d-flex">
+                <div class="card-top">
+                    <div class="col" style="width: 100%">
+                        <div class="card-1 d-flex">
+                            <img src="img/google-search.jpg" width="50%" alt="">
+                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                        </div>
+                        <div class="card-2 d-flex mt-5">
+                            <img src="img/google-search.jpg" width="50%" alt="">
+                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                        </div>
+                        <div class="card-3 d-flex mt-5">
+                            <img src="img/google-search.jpg" width="50%" alt="">
+                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                        </div>
+                        <div class="card-4 d-flex mt-5">
+                            <i class="fab fa-twitter"></i> hello
+                        </div>
+                    </div>
+                </div>
 
-    </main>
+            </div>
+        </main>
+    </div>
 
-</div>
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+            integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+            crossorigin="anonymous"></script>
 </body>
 </html>
