--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/codeup-design.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 </head>
+
 
 <body id="custom">
 <header>
@@ -125,20 +127,23 @@
                 <div class="card-top">
                     <div class="col" style="width: 100%">
                         <div class="card-1 d-flex">
-                            <img src="img/google-search.jpg" width="50%" alt="">
-                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                            <img src="img/google-search.jpg" width="50%" alt="google-search">
+                            <p class="col-9">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
                         </div>
                         <div class="card-2 d-flex mt-5">
-                            <img src="img/google-search.jpg" width="50%" alt="">
-                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                            <img src="img/head.jpg" width="50%" alt="3d-head">
+                            <p class="col-8">NIBBLER AWESOME WEBSITE TESTING</p>
                         </div>
                         <div class="card-3 d-flex mt-5">
-                            <img src="img/google-search.jpg" width="50%" alt="">
-                            <p class="col-12">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                            <img src="img/ipad.jpg" width="50%" alt="hand holding ipad.">
+                            <p class="col-8">HOW TO GET GOOGLE TO LIKE YOU</p>
                         </div>
                         <div class="card-4 d-flex mt-5">
-                            <i class="fab fa-twitter"></i> hello
+                            <p><i class="fab fa-twitter mx-2"></i>Last tweet</p>
                         </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto at cum debitis
+                            dolor dolore dolorem ducimus earum enim exercitationem, minus nihil nobis perferendis porro
+                            quas quo quos saepe unde.</p>
                     </div>
                 </div>
 
@@ -155,5 +160,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
             integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
             crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
