--- a/index.html
+++ b/index.html
@@ -11,12 +11,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 </head>
 
+<!--NAV-BAR-->
+<div class="container"></div>
+<nav class="navbar navbar-expand justify-content-center">
+    <!--  Show this only on mobile screens  -->
+    <div class="row w-100">
+
+    <a class="topLogo col-sm-12 d-flex justify-content-center"><img class="logo" src="img/logo.png" width="105" height="105" ></a>
+
+        <h2 class="col-sm-12 text-center">Codeup Design</h2>
+
+        <ul class="navbar-nav col-12 col-sm-12 text-center">
+            <li class="nav-item col-3">
+                <a class="nav-link" href="#">SERVICES</a>
+            </li>
+            <li class="nav-item col-3">
+                <a class="nav-link" href="#">WORK</a>
+            </li>
+            <li class="nav-item col-3">
+                <a class="nav-link" href="#">BLOG</a>
+            </li>
+            <li class="nav-item col-3">
+                <a class="nav-link" href="#">CONTACT</a>
+            </li>
+
+        </ul>
+    </div>
+        <!--   Show this only lg screens and up   -->
+<!--        <a class="navbar-brand" href="#"><img src="img/logo.png" width="105" height="105"></a>-->
+</nav>
+</div>
+
 
 <body id="custom">
 <header>
-    <div class="container my-3 text-center" id="main-container">
-        <h1 id="name-header">VISUAL DESIGN & WEB DEVELOPMENT</h1>
-        <h2 class="my-3">FROM PARK CITY, UTAH</h2>
+    <div class="container my-3 text-center">
+        <h2 id="name-header">VISUAL DESIGN & WEB DEVELOPMENT</h2>
+        <h4 class="my-3">FROM PARK CITY, UTAH</h4>
     </div>
 </header>
 
@@ -51,7 +82,7 @@
         <div class="col-md-8">
             <p class="text-left mt-3">SELECTED WORK</p>
         </div>
-        <div class="col-md-4">
+        <div class="d-none d-md-block col-md-4">
             <p class=" mt-3">The last</p>
         </div>
 
@@ -123,7 +154,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-3 d-flex">
+            <div class="col-sm-12 col-md-4 d-flex"> <!-- Changed to col-md-4 -->
                 <div class="card-top">
                     <div class="col" style="width: 100%">
                         <div class="card-1 d-flex">
