Working on navbar

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 </head>
 
 <!--NAV-BAR-->
-
-<div class="container.fluid px-0 w-100">
+<!--SMALL NAV-->
+<div class="container.fluid px-0 w-100 .d-none .d-sm-block .d-md-none">
 <nav class="row navbar bg-#E6E6E6 justify-content-center py-1">
     <!-- set px-0 to override the inherit padding and allow the white box to flow to the edges -->
     <!--  Show this only on mobile screens  -->
-    <!--    <div class="row w-100 ">-->
-    <!--Top Logo-->
     <a class="topLogo mb-3 d-flex col-sm-12 justify-content-center px-0">
         <img class="logo" src="img/logo.png" width="105" height="105">
     </a>
@@ -41,12 +39,36 @@
         </li>
 
     </ul>
-    <!--    </div>-->
-    <!--   Show this only lg screens and up   -->
-    <!--        <a class="navbar-brand" href="#"><img src="img/logo.png" width="105" height="105"></a>-->
 </nav>
 </div>
 
+<!--&lt;!&ndash;MEDIUM NAV&ndash;&gt;-->
+<!--<div class="container.fluid px-0 w-100 .d-none .d-md-block .d-lg-none">-->
+<!--    <nav class="row navbar bg-#E6E6E6 justify-content-center py-1">-->
+<!--        <a class="topLogo mb-3 d-flex col-sm-12 justify-content-center px-0">-->
+<!--            <img class="logo" src="img/logo.png" width="105" height="105">-->
+<!--        </a>-->
+<!--        <h2 class="col-sm-12 text-center topBrand justify-content-md-center">-->
+<!--            codeup design-->
+<!--        </h2>-->
+<!--        <ul class="navbar-nav navbar-expand text-center col-12 justify-content-around">-->
+<!--            <li class="nav-item ">-->
+<!--                <a class="nav-link" href="#">SERVICES</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item ">-->
+<!--                <a class="nav-link" href="#">WORK</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item ">-->
+<!--                <a class="nav-link" href="#">BLOG</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item ">-->
+<!--                <a class="nav-link" href="#">CONTACT</a>-->
+<!--            </li>-->
+
+<!--        </ul>-->
+
+<!--    </nav>-->
+<!--</div>-->
 
 <body id="custom">
 <header>
