--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
 
 <!--NAV-BAR-->
 <!--SMALL NAV-->
-<div class="container.fluid px-0 w-100 .d-none .d-sm-block .d-md-none">
+<div class="px-0 w-100">
 <nav class="row navbar bg-#E6E6E6 justify-content-center py-1">
     <!-- set px-0 to override the inherit padding and allow the white box to flow to the edges -->
     <!--  Show this only on mobile screens  -->
-    <a class="topLogo mb-3 d-flex col-sm-12 justify-content-center px-0">
+    <div class="topLogo mb-3 d-flex col-sm-12 align-items-center px-0 justify-content-around justify-content-md-start">
+        <a class="nav-link d-none d-sm-block d-md-none" href="#">SERVICES</a>
+        <a class="nav-link d-none d-sm-block d-md-none" href="#">WORK</a>
+        <img class="logo d-block d-md-none" src="img/logo.png" width="105" height="105">
+        <a class="nav-link d-none d-sm-block d-md-none" href="#">BLOG</a>
+        <a class="nav-link d-none d-sm-block d-md-none" href="#">CONTACT</a>
+<div class="container d-none d-md-flex">
         <img class="logo" src="img/logo.png" width="105" height="105">
-    </a>
-    <h2 class="col-sm-12 text-center topBrand justify-content-md-center">
+        <h2 class="ml-2 topBrand text-md-left d-md-block d-none">
+            codeup design
+        </h2>
+        <a class="nav-link d-none d-md-block ml-auto" href="#">BLOG</a>
+        <a class="nav-link d-none d-md-block" href="#">CONTACT</a>
+        <a class="nav-link d-none d-md-block" href="#">BLOG</a>
+        <a class="nav-link d-none d-md-block" href="#">CONTACT</a>
+    </div>
+
+    </div>
+    <h2 class="col-sm-12 text-center topBrand justify-content-md-center d-sm-block d-md-none">
         codeup design
     </h2>
     <!--Created topBrand class to modify the font of "code up design" -->
-    <ul class="navbar-nav navbar-expand text-center col-12 justify-content-around">
+    <ul class="navbar-nav navbar-expand text-center col-12 justify-content-around d-sm-none">
         <li class="nav-item ">
             <a class="nav-link" href="#">SERVICES</a>
         </li>
@@ -42,7 +57,7 @@
 </nav>
 </div>
 
-<!--&lt;!&ndash;MEDIUM NAV&ndash;&gt;-->
+<!--MEDIUM NAV-->
 <!--<div class="container.fluid px-0 w-100 .d-none .d-md-block .d-lg-none">-->
 <!--    <nav class="row navbar bg-#E6E6E6 justify-content-center py-1">-->
 <!--        <a class="topLogo mb-3 d-flex col-sm-12 justify-content-center px-0">-->
@@ -109,16 +124,17 @@
 
     <div class="row">
         <div class="col-md-8">
-            <p class="text-left mt-3">SELECTED WORK</p>
+            <p class="text-center text-md-left mt-3">SELECTED WORK</p>
         </div>
         <div class="d-none d-md-block col-md-4">
-            <p class=" mt-3">The last</p>
+            <p class=" mt-3 ml-3">THE LAST</p>
         </div>
 
         <main class="row">
 
             <!--CARD 1-->
             <!--Used pt-0 (padding-top: 0px;) to remove the extra padding on top of the "featured Project text-->
+
             <div class="col-sm-12 col-md-8">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 d-flex flex-column align-content-center justify-content-center">
@@ -188,10 +204,12 @@
 
             <div class="col-sm-12 col-md-4 d-flex d-none d-md-block"> <!-- Changed to col-md-4 -->
                 <div class="card-top">
-                    <div class="col" style="width: 100%">
-                        <div class="card-1 d-flex">
-                            <img src="img/google-search.jpg" width="50%" alt="google-search">
-                            <p class="col-9">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+
+                        <div class="card-1 d-flex align-items-start">
+                            <div class="imagePreview" id="google">
+
+                            </div>
+                            <p class="">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
                         </div>
                         <div class="card-2 d-flex mt-5">
                             <img src="img/head.jpg" width="50%" alt="3d-head">
@@ -208,7 +226,7 @@
                             architecto at cum debitis
                             dolor dolore dolorem ducimus earum enim exercitationem, minus nihil nobis perferendis porro
                             quas quo quos saepe unde.</p>
-                    </div>
+
                 </div>
 
             </div>
