--- a/index.html
+++ b/index.html
@@ -204,12 +204,10 @@
 
             <div class="col-sm-12 col-md-4 d-flex d-none d-md-block"> <!-- Changed to col-md-4 -->
                 <div class="card-top">
-
-                        <div class="card-1 d-flex align-items-start">
-                            <div class="imagePreview" id="google">
-
-                            </div>
-                            <p class="">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
+                    <div class="col" style="width: 100%">
+                        <div class="card-1 d-flex">
+                            <img src="img/google-search.jpg" width="50%" alt="google-search">
+                            <p class="col-9">THE ADMIN BAR AND ABSOLUTE POSITIONING</p>
                         </div>
                         <div class="card-2 d-flex mt-5">
                             <img src="img/head.jpg" width="50%" alt="3d-head">
@@ -226,7 +224,7 @@
                             architecto at cum debitis
                             dolor dolore dolorem ducimus earum enim exercitationem, minus nihil nobis perferendis porro
                             quas quo quos saepe unde.</p>
-
+                    </div>
                 </div>
 
             </div>
